<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adking</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="registerButton">Registrieren</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="name">Vorname</string>
    <string name="surname">Nachname</string>
    <string name="organization" />
    <string name="repeatPW">Passwort erneut eingeben</string>
    <string name="registerSuccess">Konto anlegen</string>
    <string name="abort">Abbrechen</string>
    <string name="login">Anmelden</string>
    <string name="nameMissing">Name fehlt</string>
    <string name="usernameExists">Benutzername vergeben</string>
    <string name="passwordIncorrect">Passwort stimmt nicht überein</string>
    <string name="passwordWrong">falsches Passwort</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="title_activity_register_screen">RegisterScreenActivity</string>
    <string name="title_activity_create_spot">CreateSpotActivity</string>
    <string name="createSpotText">Der Text für den Werbespot</string>
    <string name="title_activity_account_options">AccountOptions</string>
    <string name="createSpot">Werbespot erstellen</string>
    <string name="logout">Abmelden</string>
    <string name="accountdata">Kontodaten ändern</string>
    <string name="uploadSpot">Werbespot übertragen</string>
    <string name="appSettings">Einstellungen</string>
    <string name="changeSpot">Werbespot ändern</string>
    <string name="saveSpot">Speichern</string>
    <string name="userLoggedIn">Angemeldet als:</string>
    <string name="welcomeMessageLogin">Willkommen:</string>

</resources>
