<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.adking.CreateSpot" >

    <TextView
        android:id="@+id/textViewCreateSpot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:editable="false"
        android:text="@string/createSpotText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/titleSpot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:editable="true"
        android:ems="15"
        android:enabled="true"
        android:hint="Titel"
        android:inputType="textMultiLine"
        android:lines="1"
        android:maxLines="1" >

        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/descriptionSpot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:editable="true"
        android:ems="15"
        android:enabled="true"
        android:hint="Beschreibung"
        android:inputType="textMultiLine"
        android:lines="1"
        android:maxLines="1" >

        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/insertSpotText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:editable="true"
        android:ems="15"
        android:enabled="true"
        android:hint="Hier können Sie den Text für den Werbespot eingeben"
        android:inputType="textMultiLine"
        android:lines="6"
        android:maxLines="8" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonAbort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonSaveSpot"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/buttonSaveSpot"
        android:text="@string/abort" />

    <Button
        android:id="@+id/buttonSaveSpot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/insertSpotText"
        android:layout_below="@+id/insertSpotText"
        android:text="@string/saveSpot" />

</RelativeLayout>
